[package]
name = "mandelbrot"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
winit = "0.27"
winit_input_helper = "0.13.0"
