[package]
name = "mandelbrot"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
cfg-if = "1"
bytemuck = { version = "1.4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
winit = "0.27"
winit_input_helper = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
console_log = {version = "0.2", optional = true, features = ["color"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
wgpu = { version = "0.13", features = ["webgl"] }
