[package]
name = "mandelbrot"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2", optional = true, features = ["color"] }
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"Element",
	"HtmlCanvasElement",
] }
wgpu = { version = "0.13", features = ["webgl"] }
winit = "0.27"
